kubernetes/apps/networking/external-services/hades/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app hades-ui
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.home.arpa/type: "internal"
spec:
  rules:
    - host: hades-ui.${SECRET_DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hades
                port:
                  number: 5000
